--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.3",
     "@adonisjs/validator": "^5.0.3",
+    "@adonisjs/vow": "^1.0.15",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.4"
   },
