--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^5.0.3",
     "@adonisjs/validator": "^5.0.3",
     "@adonisjs/vow": "^1.0.15",
+    "axios": "^0.18.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.4"
   },
