Add Twilio Verify configs
So I can send text messages.

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_PORT=3306
 DB_USER=e90xujdkophklvf1
 DB_PASSWORD=nxys1axyoby0kisb
 DB_DATABASE=nuazr3htpzw4e314
+TWILIO_VERIFY_API_KEY=108RJQgtZIvDpAzK4hK1kFeQ3UCTslzo
+TWILIO_VERIFY_URL=https://api.authy.com/protected/json/phones/verification
