--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DB_PORT=3307
 DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=cryslo
+TWILIO_VERIFY_API_KEY=108RJQgtZIvDpAzK4hK1kFeQ3UCTslzo
+TWILIO_VERIFY_URL=https://api.authy.com/protected/json/phones/verification
